--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
 <body>
     <nav class="navbar navbar-expand-lg bg-warning-text" style="background-color: #e7b6f3;">
         <div class="container">
-          <a  class="navbar-brand" href="#">
+          <a  class="navbar-brand" href="#" id="title">
             <img src="logo.JPG" alt="" width="36" height="30" class="d-inline-block align-text-top">
             Vegan Chocolate
           </a>
+          
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -80,7 +81,7 @@
                     <img src="image3.jpg"
                     class="img-thumbnail h-80" alt="Bacon" style="font-size: 5rem;">
                     <h3>Bacon</h3>
-                    <p class="text-center d-none d-md-block">Bacon and Applewood smoked salt.</p>
+                    <p class="text-center d-none d-md-block">Bacon and Applewood smoked salt chocolate truffle.</p>
                 </div>
             </div>
         </div>
@@ -116,7 +117,7 @@
                     <img src="image6.jpg"
                     class="img-thumbnail h-80" alt="Vegan Peanut" style="font-size: 5rem;">
                     <h3>Vegan Peanut</h3>
-                    <p class="text-center d-none d-md-block"> Peanut butter, Dates and Coconut.</p>
+                    <p class="text-center d-none d-md-block"> Peanut butter, Dates and Coconut chocolate.</p>
                 </div>
             </div>
         </div>
